# wasi-usb-guests

./: Cargo.toml  LICENSE
bindings/: Cargo.toml
bindings/src/: lib.rs
bindings/wit/: world.wit
file-read-demo/: Cargo.toml
file-read-demo/src/: main.rs
file-read-demo/wit/: world.wit
lsusb-rusb/: Cargo.toml
lsusb-rusb/src/: main.rs
lsusb-simple/: Cargo.toml
lsusb-simple/src/: main.rs
pacman/: Cargo.toml
pacman-ps5/: Cargo.toml
pacman-ps5/src/: main.rs
pacman-xbox/: Cargo.toml
pacman-xbox/src/: main.rs
pacman/src/: lib.rs  types.rs  window.rs
snake/: Cargo.toml
snake-ps5/: Cargo.toml
snake-ps5/src/: main.rs
snake/src/: lib.rs  types.rs  window.rs
toml-config-traverse/: Cargo.toml
toml-config-traverse/src/: main.rs
toml-config-traverse/wit/: world.wit
usb-config-provider/: Cargo.toml
usb-config-provider/src/: lib.rs
usb-config-provider/wit/: world.wit
usb-file-reader/: Cargo.toml
usb-file-reader/src/: lib.rs
usb-file-reader/wit/: world.wit
usb-stick-info/: Cargo.toml
usb-stick-info/src/: main.rs
usb-stick-read/: Cargo.toml
usb-stick-read/src/: main.rs
usb-stick-tree/: Cargo.toml
usb-stick-tree/src/: main.rs
usb-storage/: Cargo.toml
usb-storage/src/: block_device.rs  bot.rs  discovery.rs  lib.rs  partition.rs  scsi.rs
