[workspace]
members = [
    "bindings",
    "lsusb-simple",
    "lsusb-rusb",
    "pacman",
    "pacman-xbox",
    "pacman-ps5",
    "snake",
    "snake-ps5",
    "usb-storage",
    "usb-stick-info",
    "usb-stick-read",
    "usb-stick-tree",
    "usb-file-reader",
    "file-read-demo",
    "usb-config-provider",
    "toml-config-traverse",
]
resolver = "3"

[workspace.dependencies]
bindings = { path = "bindings" }
rusb = { path = "../rusb" }
pacman = { path = "pacman" }
snake = { path = "snake" }
usb-storage = { path = "usb-storage" }
